--- a/main.html
+++ b/main.html
@@ -10,16 +10,31 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
-			
+			let max=0;
+			let secondmax=0;
+			if(arr.length<=1){
+				return -Infinity;
+			}
+			for(let i=0;i<arr.length;i++){
+				if(arr[i]>max){
+					max=arr[i];
+				}
+			}
+			for(let j=0;j<arr.length;j++){
+				if(arr[j]>secondmax && arr[j]<max){
+					secondmax=arr[j];
+				}
+			}
+			return secondmax
 		}
 
 		function Main() {
-			var n = prompt("Enter the number of elements");
+			var n = //prompt("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
+				//arr[i] = prompt("Enter element " + (i+1));
 			}
-			alert(secondHighest(arr));
+			//alert(secondHighest(arr));
 		}
 		Main();
 	</script>
