--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
-			let max=0;
-			let secondmax=0;
+			let max = -Infinity;
+			let secondMax = -Infinity;
 			if(arr.length<=1){
 				return -Infinity;
 			}
