--- a/main.html
+++ b/main.html
@@ -9,32 +9,38 @@
 <body>	
 	<script>
 		function secondHighest(arr) {
-			//Write your code here
-			let max = -Infinity;
-			let secondMax = -Infinity;
-			if(arr.length<=1){
-				return -Infinity;
-			}
-			for(let i=0;i<arr.length;i++){
-				if(arr[i]>max){
-					max=arr[i];
-				}
-			}
-			for(let j=0;j<arr.length;j++){
-				if(arr[j]>secondmax && arr[j]<max){
-					secondmax=arr[j];
-				}
-			}
-			return secondmax
-		}
+  if (arr.length <= 1) {
+    return -Infinity;
+  }
+
+  let max = -Infinity;
+  let secondMax = -Infinity;
+
+  for (let i = 0; i < arr.length; i++) {
+    if (arr[i] > max) {
+      secondMax = max;
+      max = arr[i];
+    } else if (arr[i] > secondMax && arr[i] < max) {
+      secondMax = arr[i];
+    }
+  }
+
+  if (secondMax === -Infinity) {
+    return -Infinity;
+  }
+
+  return secondMax;
+}
+
+		
 
 		function Main() {
-			var n = //prompt("Enter the number of elements");
+			var n = prompt("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
-				//arr[i] = prompt("Enter element " + (i+1));
+				arr[i] = prompt("Enter element " + (i+1));
 			}
-			//alert(secondHighest(arr));
+			alert(secondHighest(arr));
 		}
 		Main();
 	</script>
